
  [ Samuel Thibault ]
  * debian/patches/hurd-i386/local-fix-nss.diff: Rebased.
  * debian/patches/hurd-i386/{tg-single-select-timeout.diff,tg-setitimer.diff,
    tg-remap_getcwd.diff,tg-io_select_timeout.diff,tg-poll_errors_fixes.diff,
    submitted-anon-mmap-shared.diff,tg-ONSTACK.diff}: Rename to git-foo,
    committed upstream for 2.31.
  * debian/testsuite-xfail-debian.mk: Update with new failing tests.
  * debian/patches/hurd-i386/git-ONSTACK.diff: Move earlier in the queue,
    since was applied upstream.
  * debian/patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rebase
    accordingly.
  * debian/patches/hurd-i386/libpthread_version.diff: Remove, now useless.
  * debian/patches/hurd-i386/local-hurdsig-globaldisp-version.diff: Remove
    version compatibility symbols, now useless.
  * debian/libc0.3.symbols.hurd-i386: Update accordingly.
  * debian/patches/hurd-i386/tg-sysvshm.diff: Fix warning.
  * debian/patches/hurd-i386/local-versionshack.diff: Remove, now useless.

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.

 -- Adam Conrad <adconrad@0c3.net>  Thu, 29 Aug 2019 01:58:14 -0600

glibc (2.29-1) unstable; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - Fix math tests on alpha.
  * debian/sysdeps/alpha.mk, debian/control.in/main: do not force build with
    gcc-8.
  * debian/testsuite-xfail-debian.mk: XFAIL narrowing add/sub tests, they
    have always failed since they have been introduced.
  * debian/control.in/libc: add a Breaks: iraf-fitsutil (<< 2018.07.06-4) to
    libc0.1/0.3/6/6.1. See bug#939523.
  * debian/testsuite-xfail-debian.mk: drop XFAILs related to the wrong value
    of (MIN)SIGSTKSZ for 32-bit processes on arm64, now that (old-)stable
    kernels are fixed.

  [ Samuel Thibault ]
  * debian/patches/hurd-i386/submitted-anon-mmap-shared.diff: Enable, now that
    hurd 2017 is behind.