@@ -26,7 +26,8 @@ glibc (2.30-0experimental0) UNRELEASED; urgency=medium
     tg-remap_getcwd.diff,tg-io_select_timeout.diff,tg-poll_errors_fixes.diff,
     submitted-anon-mmap-shared.diff,tg-ONSTACK.diff}: Rename to git-foo,
     committed upstream for 2.31.
-  * debian/testsuite-xfail-debian.mk: Update with new failing tests.
+  * debian/testsuite-xfail-debian.mk: Update with new failing tests and fixed
+    tests.
   * debian/patches/hurd-i386/git-ONSTACK.diff: Move earlier in the queue,
     since was applied upstream.
   * debian/patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rebase
